Bug 481540 - Can't use filesystem directory as destination
Summary: Can't use filesystem directory as destination
Status: RESOLVED FIXED
Alias: None
Product: kup
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.9.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Simon Persson
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-02-19 11:56 UTC by dominik.klementowski
Modified: 2024-03-13 20:18 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description dominik.klementowski 2024-02-19 11:56:36 UTC
SUMMARY
Using kup-0.9.1.20231221-1 with Arch Linux and kde-unstable Plasma 6.0. 
Trying to setup backup to manually mounted additional internal harddrive. It's regular ext4 with just one directory for backup with ownership set as my user (1000).
When selecting "Destination" I switch from "External Storage" to "Filesystem Path" and then choose my `/mnt/backup/xyz` directory. After pressing Apply I get a popup window with message "Backup plan 1 does not have a destination! No backups will be saved by this plan.". When I close the settings and reopen it, still "External Storage" is selected, and changing to "Internal Storage" shows that it saved my provided path, but not the fact that I want to use internal storage itself.

When running systemsettings from terminal it throws some clues:
```
qt.core.qobject.connect: QObject::connect: No such signal QSignalMapper::mapped(int) in /usr/src/debug/kup/kup/kcm/kbuttongroup.cpp:22
qt.core.qobject.connect: QObject::connect: No such signal QSignalMapper::mapped(int) in /usr/src/debug/kup/kup/kcm/kbuttongroup.cpp:23
qt.core.qobject.connect: QObject::connect: No such signal QSignalMapper::mapped(int) in /usr/src/debug/kup/kup/kcm/kbuttongroup.cpp:24
qt.core.qobject.connect: QObject::connect: No such signal QSignalMapper::mapped(int) in /usr/src/debug/kup/kup/kcm/kbuttongroup.cpp:22
qt.core.qobject.connect: QObject::connect: No such signal QSignalMapper::mapped(int) in /usr/src/debug/kup/kup/kcm/kbuttongroup.cpp:23
qt.core.qobject.connect: QObject::connect: No such signal QSignalMapper::mapped(int) in /usr/src/debug/kup/kup/kcm/kbuttongroup.cpp:24
qt.core.qobject.connect: QObject::connect: No such signal QSignalMapper::mapped(int) in /usr/src/debug/kup/kup/kcm/kbuttongroup.cpp:22
qt.core.qobject.connect: QObject::connect: No such signal QSignalMapper::mapped(int) in /usr/src/debug/kup/kup/kcm/kbuttongroup.cpp:23
qt.core.qobject.connect: QObject::connect: No such signal QSignalMapper::mapped(int) in /usr/src/debug/kup/kup/kcm/kbuttongroup.cpp:24
qt.qpa.wayland.textinput: virtual void QtWaylandClient::QWaylandTextInputv3::zwp_text_input_v3_leave(wl_surface*) Got leave event for surface 0x0 focused surface 0x64091ece0730
```


STEPS TO REPRODUCE
1. Install kup, go to systemsettings -> backups
2. Create new plan, in "Destination" switch the radio button to "Filesystem Path" and choose a directory
3. Apply

OBSERVED RESULT
Backup cannot be created due to "no destination"

EXPECTED RESULT
Should work

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Arch Linux
(available in About System)
KDE Plasma Version: 5.93.0
KDE Frameworks Version: 5.249.0
Qt Version: 6.7.0

ADDITIONAL INFORMATION
Comment 1 Simon Persson 2024-03-13 20:18:45 UTC
Git commit 769ef9be9263a5856da0974ca133d1571d480e2b by Simon Persson.
Committed on 13/03/2024 at 20:17.
Pushed by persson into branch 'master'.

Port away from QSignalMapper::mapped signals

These overloaded signals were removed in Qt6. Qt5.15 contains the
replacement signals, same as qt6.

M  +3    -3    kcm/kbuttongroup.cpp

https://invent.kde.org/system/kup/-/commit/769ef9be9263a5856da0974ca133d1571d480e2b