Port away from QSignalMapper::mapped signals

These overloaded signals were removed in Qt6. Qt5.15 contains the
replacement signals, same as qt6.

BUG: 481540